Updated Latvian translation.
2006-06-20  Raivis Dejus  <orvils@gmail.com>

	* lv.po: Updated Latvian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
-2006-06-10  Josep Puigdemont Casamajó  <josep.puigdemont@gmail.com>
+2006-06-20  Raivis Dejus  <orvils@gmail.com>
 
-	* ca.po: Updated Catalan translation.
+	* lv.po: Updated Latvian translation.
 
 2006-06-05  Gabor Kelemen  <kelemeng@gnome.hu>
 
