--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* ru.po: Updated Russian translation.
+
 2006-06-20  Raivis Dejus  <orvils@gmail.com>
 
 	* lv.po: Updated Latvian translation.
