--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-22  I. Felix  <ifelix25@gmail.com>
+
+	* ta.po: Updated Tamil translation.
+
 2006-06-22  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation.
