--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-25  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-06-22  I. Felix  <ifelix25@gmail.com>
 
 	* ta.po: Updated Tamil translation.
