--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-04 16:04+0200\n"
-"PO-Revision-Date: 2006-05-04 20:03+0300\n"
+"PO-Revision-Date: 2006-05-18 23:07+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1128,7 +1128,7 @@ msgstr "Vabandust, kohandatud embleemi nime pole võimalik salvestada."
 #: ../libnautilus-private/nautilus-file-operations-progress.c:168
 #, c-format
 msgid "%s %ld of %ld %s"
-msgstr ""
+msgstr "%s %ld/%ld-st %s"
 
 #: ../libnautilus-private/nautilus-file-operations-progress.c:447
 #, c-format
