--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-01  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2006-06-20  Raivis Dejus  <orvils@gmail.com>
 
 	* lv.po: Updated Latvian translation.
