--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-03  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 2006-07-01  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
