2006-07-04  Lukas Novotny  <lukasnov@cvs.gnome.org> * cs.po: Updated Czech translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-04  Lukas Novotny  <lukasnov@cvs.gnome.org>
+
+ 	* cs.po: Updated Czech translation.
+
 2006-07-01  Žygimantas Beručka  <zygis@gnome.org>
 
 	* lt.po: Updated Lithuanian translation.
