--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-06  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2006-07-03  Runa Bhattacharjee <runabh@gmail.com>
 
         * bn_IN.po: Added Bengali India Translation
