Use nautilus-cd-burner icon instead of gnome-dev-cdrom for burn:///.
2006-07-06  William Jon McCann  <mccann@jhu.edu>

	* libnautilus-private/nautilus-icon-factory.c:
	(get_special_icon_for_file):
	* src/nautilus-window-menus.c:
	Use nautilus-cd-burner icon instead of gnome-dev-cdrom
	for burn:///.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-07-06  William Jon McCann  <mccann@jhu.edu>
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	(get_special_icon_for_file):
+	* src/nautilus-window-menus.c:
+	Use nautilus-cd-burner icon instead of gnome-dev-cdrom
+	for burn:///.
+
 2006-06-21  Christian Neumair  <chris@gnome-de.org>
 
 	Add complete session management, remember maximization state and type
