--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-08  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2006-07-06  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
