--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-09  Jovan Naumovski  <jovan@lugola.net>
+
+	* mk.po: Updated Macedonian translation
+
 2006-07-08  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
