--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+=== nautilus 2.15.4 ===
+
+2006-07-11  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump version to 2.15.4
+	Require eel 2.15.4
+
 2006-07-11  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-directory-async.c:
