--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.15.4 are:
+* New permission dialog with recursion and selinx support
+* Improve extension interface
+* Add complete session management
+* Handle removal of the displayed location more elegantly
+* Use proper nautilus-cd-burner icon
+* Support dropping uris, urls and text to subfolders
+* Fix leaks and warnings
+
 Major changes in 2.15.2 are:
 * Don't allow formating of mounted floppies
 * Perfomance fixes
