Updated Russian translation
2006-07-13  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* ru.po: Updated Russian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-13  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
+	* ru.po: Updated Russian translation
+
 2006-07-09  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Updated Macedonian translation
