--- a/po/ru.po
+++ b/po/ru.po
@@ -5350,7 +5350,7 @@ msgstr "Убрать"
 
 #: ../src/nautilus-places-sidebar.c:1249
 msgid "Rename..."
-msgstr "Переи_меновать..."
+msgstr "Переименовать..."
 
 #: ../src/nautilus-places-sidebar.c:1261
 msgid "_Mount"
