--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-14  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated.
+
 2006-07-13  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
 	* ru.po: Updated Russian translation
