--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-16  Daniel Nylander  <po@danielnylander.se>
+
+        * sv.po: Updated Swedish translation.
+	
 2006-07-14  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated.
