Update Italian translation
2006-07-22  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Update Italian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-22  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Update Italian translation.
+
 2006-07-22  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
