--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-23  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2006-07-22  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Update Italian translation.
