--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-23  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2006-07-23  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
