Add a translator comment for permission combo box labels. (#347764)
2006-07-25  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-properties-window.c:
	(permission_combo_update): Add a translator comment for
	permission combo box labels. (#347764)

	Patch from Hendrik Richter  <hendi@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-properties-window.c:
+	(permission_combo_update): Add a translator comment for
+	permission combo box labels. (#347764)
+
+	Patch from Hendrik Richter  <hendi@gnome-de.org>
+
+2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-window-private.h (NautilusNavigationWindowDetails):
 	Add a location_button field.
 
