--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.15.90 ===
+
+2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Require eel 2.15.90
+
 2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-main.c: (main):
