--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.15.90 are:
+* Submenu support for extensions
+* Improved beagle daemon detection
+* Enable D'n'D reordering in the places sidebar
+* New icons for trash operations
+* Add a button/text toggle button to the location bar
+* Fix leak
+
 Major changes in 2.15.4 are:
 * New permission dialog with recursion and selinx support
 * Improve extension interface
