--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post-release version bump
+
 === nautilus 2.15.90 ===
 
 2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
