Translation updated by Ivar Smolin.
2006-07-25  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-25  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-07-11  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
