Import the latest EggSequence which supposedly fixes a bunch of bugs.
2006-07-25  Alexander Larsson  <alexl@redhat.com>

	* cut-n-paste-code/gsequence/gsequence.[ch]:
	Import the latest EggSequence which supposedly fixes a
	bunch of bugs.

	* src/file-manager/fm-list-model.c:
	Fix to use new function names of EggSequence

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-07-25  Alexander Larsson  <alexl@redhat.com>
+
+	* cut-n-paste-code/gsequence/gsequence.[ch]:
+	Import the latest EggSequence which supposedly fixes a
+	bunch of bugs.
+	
+	* src/file-manager/fm-list-model.c:
+	Fix to use new function names of EggSequence	
+	
 2006-07-25  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
