--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-07-25  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (nautilus_file_get_selinux_context):
+	Translate the selinux context from raw form when displayin.
+
+2006-07-25  Alexander Larsson  <alexl@redhat.com>
+
 	* cut-n-paste-code/gsequence/gsequence.[ch]:
 	Import the latest EggSequence which supposedly fixes a
 	bunch of bugs.
