Updated Czech translation.
2006-07-26  Jakub Friedl  <jfriedl@suse.cz>

  * cs.po: Updated Czech translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
-2006-07-26  Ankit Patel  <ankit644@yahoo.com>
+2006-07-26  Jakub Friedl  <jfriedl@suse.cz>
 
-	* gu.po: Updated Gujarati Translation.
+	* cs.po: Updated Czech translation.
 
 2006-07-25  Francisco Javier F. Serrador  <serrador@openshine.com>
 
@@ -28,12 +28,12 @@
 
 2006-07-21  Kostas Papadimas  <pkst@gnome.org>
 
-         * el.po: Updated Greek translation
+	* el.po: Updated Greek translation
 
 2006-07-18  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * dz.po: Updated Dzongkha translation by
-        Dzongkhalinux team, DIT
+	* dz.po: Updated Dzongkha translation by
+	Dzongkhalinux team, DIT
 
 2006-07-17  Hendrik Richter  <hendrikr@gnome.org>
 
@@ -41,7 +41,7 @@
 
 2006-07-16  Daniel Nylander  <po@danielnylander.se>
 
-        * sv.po: Updated Swedish translation.
+	* sv.po: Updated Swedish translation.
 	
 2006-07-14  Priit Laes  <amd@store20.com>
 
